2006-06-08  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/border/MatteBorder.java:
	(MatteBorder(int,int,int,int,Icon)): Removed if-statement and exception
	throwing.
	(paintBorder): Added if-statement to abort painting early.

2006-06-08  Robert Schuster  <robertschuster@fsfe.org>

        Fixes PR27864.
        * gnu/xml/dom/DomIterator.java:
        (successor): Changed expression.

2006-06-08  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(defaultLayout): Do kerning.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_FreetypeGlyphVector.c
	(getKerning): Correct class name, removed unused variable.

2006-06-07  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/qt/QtToolkit.java (initToolkit): Load
	libqtpeer.so unconditionally.

2006-06-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/InputMismatchException.java:
	Documented.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/util/InputMismatchException.java: New file.
	
2006-06-07  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jawt/Makefile.am (AM_LDFLAGS): Add XTEST_LIBS.

2006-06-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(completeUIUninstall): Implemented.
	(uninstallUI): Moved some bits to completeUIUninstall(). Complete
	editing before uninstalling anything.
	(isToggleEvent): Implemented.
	(selectPathForEvent): Make use of isToggleEvent().
	(ComponentHandler.componentMoved): Implemented.
	(ComponentHandler.startTimer): Implemented.
	(ComponentHandler.getScrollPane): Implemented.
	(ComponentHandler.actionPerformed): Implemented.

2006-06-07  Francis Kung  <fkung@redhat.com>

	* javax/swing/JMenuBar.java:
	(getSubElements): Do not return null values.

2006-06-07  Roman Kennke  <kennke@aicas.com>

	PR 27902
	* gnu/regexp/BacktrackStack.java
	* gnu/regexp/CharIndexed.java
	* gnu/regexp/CharIndexedCharArray.java
	* gnu/regexp/CharIndexedCharSequence.java